tests: mise a jours des scénario pour delete
